<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C2C2D8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:backgroundTint="#52BF8C"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#93BADA"
            android:text="Formulario de Registro"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_cedula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cedula"
            android:inputType="number"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/telefono"
            android:inputType="phone"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_Rcontrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Rcontrasena"
            android:inputType="textPassword"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_genero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genero" />

        <RadioGroup
            android:id="@+id/rg_genero"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_femenino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/femenino" />

            <RadioButton
                android:id="@+id/rb_masculino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/masculino" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_cnacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ciudaddenacimiento"
            android:textColor="@android:color/background_dark" />

        <Spinner
            android:id="@+id/sp_ciudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/ciudades" />

        <TextView
            android:id="@+id/tv_nacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fechadenacimiento"
            android:textColor="@android:color/background_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ib_calendario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#BAA893"
                app:srcCompat="@android:drawable/ic_menu_my_calendar" />

            <TextView
                android:id="@+id/tv_fecha_nacimiento"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:text="@string/fecha"
                android:textAlignment="gravity"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_hobbies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hobbies" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cb_leer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/leer" />

                <CheckBox
                    android:id="@+id/cb_jugar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/jugar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cb_comer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/comer" />

                <CheckBox
                    android:id="@+id/cb_cine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cine" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/bt_guardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_circular"
            android:onClick="setOnClickListener"
            android:text="@string/guardar"
            android:textColor="@drawable/txt_btn_circular"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>
</ScrollView>